--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
             of my majors were what I wanted to pursue as my career, 
             I decided to try teaching myself to code and see what I thought. After
             spending a year teaching myself 
-            <a href="https://developer.apple.com/swift/">Swift</a>
+            <a href="https://developer.apple.com/swift/" target="_blank">Swift</a>
             and loving every minute, I've decided I want to make coding my career!
         </p>
         
         <p>
             To that end, this fall I'm participating in the University of Minnesota's 
-            full time Coding Bootcamp. After that's finished, I hope to become a web 
-            developer or software engineer in the Twin Cities area. If I sound like
+            full time Coding Bootcamp. ***List technologies you'll learn*** 
+            After that's finished, I hope to become a web developer or software 
+            engineer in the Twin Cities area. ***List soft skills*** If I sound like
             the kind of developer you'd want in your company, feel free to 
-            <a href="contact.html">contact</a> me with questions, or just hire me!
+            <a href="contact.html" target="_blank">contact</a> 
+            me with questions, or just hire me!
         </p>
 
         <p>
