Final changes to project before submission.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="assets/css/style.css">
+    <title>About</title>
 </head>
 
 <body>
@@ -16,13 +17,21 @@
     <div class="container">
         <main class="content">
             <h1 class="page-title">About Me</h1>
-            <img class="headshot-picture" src="assets/images/Alex Charland Headshot Square.jpg">
+            <img class="headshot-picture" src="assets/images/Alex Charland Headshot Square.jpg" alt="Alex Charland Headshot">
             <p>
-                Hi! My name is Alex and I want to become a professional developer. I spent five years at the University of Wisconsin double majoring in Biology and Jazz Studies, and graduated in 2017 with a Bachelor of Science. After I realized sometime around my last semester that neither of my majors were what I wanted to pursue as my career, I decided to try teaching myself to code and see what I thought. After spending a year teaching myself <a href="https://developer.apple.com/swift/" target="_blank">Swift</a> and loving every minute, I've decided I want to make coding my career!
+                Thanks for visiting my portfolio site! Here's some information about who I am: 
+            </p>
+            <p>
+                I spent five years at the University of Wisconsin double majoring in Biology and Jazz Studies, and graduated in 2017 with a Bachelor of Science. After I realized sometime around my last semester that neither of my majors were what I wanted to pursue as my career, I decided to try teaching myself to code. After spending a year teaching myself 
+                <a href="https://developer.apple.com/swift/" target="_blank">Swift</a> 
+                and loving every minute, I've decided I want to make coding my career!
             </p>
             
             <p>
-                To that end, this fall I'm participating in the University of Minnesota's full time Coding Bootcamp. ***List technologies you'll learn*** After that's finished, I hope to become a web developer or software engineer in the Twin Cities area. ***List soft skills*** If I sound like the kind of developer you'd want in your company, feel free to <a href="contact.html" target="_blank">contact</a> me with questions, or just hire me!
+                To that end, I'm participating in the University of Minnesota's full time Coding Bootcamp this fall. I'll learn
+                <a href="https://bootcamp.umn.edu/coding/curriculum/" target="_blank">a bunch of cool stuff</a> including Bootstrap, Javascript, jQuery, JSON, AJAX, Node.js, MySQL, MongoDB, Express, Java, and MERN. After that's finished, I hope to become a web developer or software engineer in the Twin Cities area. As a lifelong learner and lover of collaborative coding, I can't wait to find my first full-time coding job. If I sound like the kind of developer you'd want in your company, feel free to 
+                <a href="contact.html" target="_blank">contact</a> 
+                me with questions, or just hire me!
             </p>
 
             <p>
